Adicionada connectionString e serviço de DB pelo builder

--- a/LivroStore/appsettings.json
+++ b/LivroStore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LivroConnection": "Server=localhost;Database=LivrosStore;User=root;Password=root;"
+  }
 }
